Fix snapshot universal limit issue